minor bug fixes regarding the visibility of flies from the site's assests directory

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 /********* custom font **********/
 @font-face {
     font-family: interVariableFont;
-    src: url(/assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+    src: url(assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
   }
 
 body{
